fix rangepicker on mobile with/without preset

--- a/BForms.Docs/Scripts/BForms/Plugins/Datepicker/css/bforms.datepicker.scss
+++ b/BForms.Docs/Scripts/BForms/Plugins/Datepicker/css/bforms.datepicker.scss
@@ -253,9 +253,8 @@ $Black: #424141;
 	.bs-datetime-picker {
 		position: relative;
 		display: inline-block !important;
-		float: left;
+		//float: left;
 		margin-left: 10px;
-		//clear: none;
 	}
 	.ranges {
 		display: inline-block;
@@ -562,21 +561,12 @@ $Black: #424141;
 }
 @media (max-width: 580px) { 
 	.bs-range-picker {
-		padding-bottom: 250px;
-		.ranges {
-			position: absolute;
-			padding: 0;
-			bottom: 0;
-			left: 10px;
-			right: 10px;
-			width: auto;
-		}
 		&.bs-hide_range{
 			padding-bottom : 0;
 		}
 	}
-	.bs-datetime-picker  {
+	.bs-range-picker .bs-datetime-picker  {
 		margin: 5px 0 !important;
-		clear: both;
+		display: block !important; 
 	}
 }
